# LearningModuleBuilderAgent

./: AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
ideas/: future_functionality.md
src/lmb_agent/: __init__.py  __main__.py  agent.py  cli.py
src/lmb_agent/nodes/: __init__.py
tests/: test_agent.py
