[project]
name = "learning-module-builder-agent"
version = "0.1.0"
description = "Minimal LangGraph workflow for building Jupyter-based learning modules"
authors = [{name = "Example", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "openai",
]

[project.scripts]
lmb-agent = "lmb_agent.cli:main"
